docs/kubernetes/apps/go-node-react-postgres/api-golang/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-golang
  namespace: demo-app
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`d11ae95f-7695-4635-9637-13829bf55c83.lb.civo.com`) && PathPrefix(`/api/golang`)
      middlewares:
        - name: strip-api-prefixes
      services:
        - kind: Service
          name: api-golang
          port: 8000
          scheme: http
